--- a/package.json
+++ b/package.json
@@ -26,12 +26,7 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@mastra/core": "^0.23.3",
-    "@mastra/evals": "^0.14.2",
-    "@mastra/libsql": "^0.16.1",
-    "@mastra/loggers": "^0.10.18",
-    "@mastra/mcp": "^0.14.1",
-    "@mastra/memory": "^0.15.10",
+    "@libsql/client": "^0.5.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-collapsible": "^1.1.12",
@@ -79,7 +74,6 @@
     "archiver": "^7.0.1",
     "autoprefixer": "^10.4.21",
     "fs-extra": "^11.3.2",
-    "mastra": "^0.17.7",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.16",
     "typescript": "^5.9.3"
