docs: update .env.example with third-party provider support
- Replace outdated enterprise gateway configuration
- Add native Bedrock and Vertex AI environment variables
- Document Azure OpenAI gateway setup
- Clarify runtime switching (no app restart needed)
- Add per-model settings explanation
- Include setup notes and prerequisites for each provider

--- a/.env.example
+++ b/.env.example
@@ -7,37 +7,50 @@
 OMNI_API_MCP_PATH=../omni-api-mcp/dist/index.js
 
 # ============================================================================
-# LLM Provider Selection (WS10: Enterprise Gateway)
+# LLM Provider Configuration
 # ============================================================================
-# Select provider: anthropic, azure, aws, gcp
-# NOTE: Changing providers requires app restart
-SELECTED_PROVIDER=anthropic
+# Runtime switching: Select provider by setting environment variables below.
+# No app restart required - switch providers mid-conversation!
+# The app auto-detects the configured provider based on these variables.
 
 # ============================================================================
-# Anthropic (Direct API)
+# Anthropic (Direct API) - Default Provider
 # ============================================================================
+# Required for fallback and direct API access
 ANTHROPIC_API_KEY=sk-ant-...
 
 # ============================================================================
-# Enterprise Gateway Providers
+# AWS Bedrock - Native Support
 # ============================================================================
-# These providers route through enterprise OAuth2 gateways that handle
-# authentication and return Anthropic-compatible responses.
+# Runtime switching: Set these to enable AWS Bedrock
+# NOTE: Requires AWS account with Bedrock enabled and Claude model access
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=AKIA...
+AWS_SECRET_ACCESS_KEY=...
 
-# Azure OpenAI (via Enterprise Gateway)
-AZURE_GATEWAY_URL=https://enterprise-gateway.company.com/azure
-AZURE_CLIENT_ID=your-client-id
-AZURE_CLIENT_SECRET=your-client-secret
-
-# AWS Bedrock (via Enterprise Gateway)
-AWS_GATEWAY_URL=https://enterprise-gateway.company.com/aws
-AWS_ACCESS_KEY_ID=your-access-key
-AWS_SECRET_ACCESS_KEY=your-secret-key
-
-# GCP Vertex AI (via Enterprise Gateway)
-GCP_GATEWAY_URL=https://enterprise-gateway.company.com/gcp
+# ============================================================================
+# GCP Vertex AI - Native Support
+# ============================================================================
+# Runtime switching: Set these to enable GCP Vertex AI
+# NOTE: Requires GCP account with Vertex AI enabled and Claude API access
 GCP_PROJECT_ID=your-project-id
-GCP_SERVICE_ACCOUNT_KEY=your-service-account-key
+GCP_SERVICE_ACCOUNT_KEY={"type":"service_account","project_id":"...","private_key":"..."}
+
+# ============================================================================
+# Azure OpenAI - Gateway Support
+# ============================================================================
+# Runtime switching: Set these to enable Azure OpenAI gateway
+# ANTHROPIC_BASE_URL routes requests through your gateway
+# The app detects 'azure' in the URL and uses Azure provider
+ANTHROPIC_BASE_URL=https://your-gateway.openai.azure.com/
+# ANTHROPIC_API_KEY above is also used for Azure
+
+# ============================================================================
+# Per-Model Settings (Stored in localStorage)
+# ============================================================================
+# Configure Max Output Tokens, Temperature, and Max Iterations per provider/model
+# in the Settings panel (no environment variables needed).
+# Settings persist across browser sessions and provider switches.
 
 # ============================================================================
 # omni-api-mcp Service API Keys
