feat: implement Streaming Input Mode with feature flag
- Add streaming-input-mode.ts module supporting both Streaming and Single Message modes
- Streaming Input Mode (default): AsyncGenerator for long-lived, stateful processing
- Single Message Mode: String for stateless, single-message processing
- Feature flag: USE_STREAMING_INPUT_MODE (default: true - recommended)
- Update chat/route.ts to use getPromptInput() based on feature flag
- Document feature in .env.example with reference to SDK docs
- Recommended for interactive chat apps with multi-turn conversations

--- a/.env.example
+++ b/.env.example
@@ -77,6 +77,17 @@ STRIPE_API_KEY=
 # Add other service API keys as needed...
 
 # ============================================================================
+# Claude Agent SDK Settings
+# ============================================================================
+# Streaming Input Mode (recommended - default: true)
+# Reference: https://docs.claude.com/en/api/agent-sdk/streaming-vs-single-mode.md
+# - true (default): Use AsyncGenerator for long-lived, stateful processing
+#   Better for: Interactive chat apps, multi-turn conversations
+# - false: Use string for stateless, single-message processing
+#   Better for: Lambda/serverless, one-shot responses
+USE_STREAMING_INPUT_MODE=true
+
+# ============================================================================
 # Application Settings
 # ============================================================================
 # Next.js
