fix: change Streaming Input Mode default to false for stateless API
- Change default from true to false (Single Message Mode)
- Streaming Input Mode is designed for long-lived CLI apps, not stateless APIs
- Next.js API routes are stateless per-request, not suitable for streaming
- Update documentation and .env.example to reflect new default
- Users can opt-in to streaming mode if needed for CLI applications
- This should resolve SDK crashes with streaming async generators

--- a/.env.example
+++ b/.env.example
@@ -79,13 +79,14 @@ STRIPE_API_KEY=
 # ============================================================================
 # Claude Agent SDK Settings
 # ============================================================================
-# Streaming Input Mode (recommended - default: true)
+# Streaming Input Mode (for long-lived CLI apps only)
 # Reference: https://docs.claude.com/en/api/agent-sdk/streaming-vs-single-mode.md
-# - true (default): Use AsyncGenerator for long-lived, stateful processing
-#   Better for: Interactive chat apps, multi-turn conversations
-# - false: Use string for stateless, single-message processing
-#   Better for: Lambda/serverless, one-shot responses
-USE_STREAMING_INPUT_MODE=true
+# - false (default): Use string for stateless, single-message processing
+#   Better for: Stateless API routes, Next.js, serverless functions
+# - true: Use AsyncGenerator for long-lived, stateful processing
+#   Better for: Long-lived CLI apps with persistent connections
+# Note: Default is false because Next.js API routes are stateless
+USE_STREAMING_INPUT_MODE=false
 
 # ============================================================================
 # Application Settings
